\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{emdbook News}
\encoding{UTF-8}

\section{Changes in version 1.3.10 (2018-05-18)}{
  \itemize{
    \item update package help page
    \item add goby data
    \item improve curve3d documentation (potential plyr issues)
  }
}
\section{Changes in version 1.3.9}{
  \itemize{
    \item add imports for R CMD check
    \item add labels to curve3d with wireframe plot
    \item change rgl from Depends: to Suggests: (helps MacOS users when
   rgl installation is troublesome)
   }
}

\section{Changes in version 1.3.8}{
   \itemize{
     \item CRAN compatibility tweaks; add link to goby data; update link
   to damselfish data
   }
}

\section{Changes in version 1.3.7}{
   \itemize{
     \item CRAN compatibility tweaks
   }
}
\section{Changes in version 1.3.5}{
  \itemize{
    \item CRAN compatibility tweaks
  }
}

\section{Changes in version 1.3.4}{
  \itemize{
    \item dbetabinom fix (reported by Christian Robert)
    \item more CRAN compatibility tweaks (versions 1.3.2 - 1.3.3)
    \item add 'lims' argument to HPDregionplot
    \item add plyr dependency, use_plyr option in curve3d
  }
}
\section{Changes in version 1.3.2.1}{
     \itemize{
       \item remove EISPACK=TRUE in dmvnorm
     }
}

\section{Changes in version 1.3.2}{
     \itemize{
       \item small fix for NAs in lambertW
       \item tweaks to avoid NOTES in CRAN check, cleanup
     }
}
\section{Changes in version 1.3.1}{
    \itemize{
      \item asymptotic extension to lambertW (remove possibility of
    vectorized branch specification)
      \item update NEWS to NEWS.Rd
  }}

\section{Changes in version 1.3}{
    \itemize{
      \item minor bugfixes for HPDregionplot 
      \item tweaks to pass checks on R 2.13
  }}

  \section{Changes in version 1.2.2.1 (24/05/2010)}{
    \itemize{
      \item add @data to calcslice
  }}
  
  \section{Changes in version 1.2.2 (17/03/2010)}{
    \itemize{
      \item add (trivial) NAMESPACE